feat(kb): graph page, QA pair editing, drift audit and index UX overhaul
- document list: segment-mode column, KnowledgeBase.Item renamed to Document, brief column removed
- graph: standalone page with paginated canvas (cursor + load-more), empty states,
  entries from list actions and document detail
- QA: pair editing (per-question inputs, content diff preserving vectors), one question
  per input with newline normalization, import supports multiple questions per answer
  (empty-answer continuation, identical-answer merge), updated template
- index UX: sanitized fail reasons with model names, collapsible failure list,
  dimension-aware retry labels, queue-aware polling with 5s retry lock, top loading bar
- reliability: AGE catalog self-heal after pg_restore, health probe marks permanent
  auth errors immediately, 300s sync LLM timeout for reasoning models
- drift audit: embedding presence check flags segments whose vectors are missing from
  the store, with one-click re-embedding repair
- KB edit: model select keyed by modelId, editing requires an explicit ingest model